syntax = "proto3";
option java_multiple_files = true;
option java_package = "protoOut";

import "google/protobuf/timestamp.proto";

service PlotService {
  rpc GeneratePlot (PlotRequest) returns (PlotResponse);
}

message PlotRequest {
  repeated google.protobuf.Timestamp x = 1;
  repeated double y = 2;
}

message PlotResponse {
  bytes image = 1;
}